[package]
name = "reservoir"
version = "0.2.0"
authors = ["Nat Pryce <sw@natpryce.com>"]
description="Reservoir sampling of iterators"
homepage = "https://github.com/npryce/reservoir-rs"
repository="https://github.com/npryce/reservoir-rs"
license="Apache-2.0"
readme="README.md"

[dependencies]
rand = "0.3.11"
